--- a/create-account.html
+++ b/create-account.html
@@ -30,7 +30,7 @@
             <input type="text" name="email" id="bio-input" placeholder="Biography" autocomplete="off" autofocus="off" class="input-box" required>
             <button class="submit-button connect-button top-create" id="create-account" onclick="createAccount()">CREATE</button>
         </div>        
-    </div>
+    </div> <div id="pagecontent-index"></div>
     <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div><div class="overlay-pop-up" id="new-overlay"></div>
     <footer class="footer"></footer>
 </body>
