--- a/settings.html
+++ b/settings.html
@@ -65,10 +65,8 @@
     </div>
 
 </div>
-
-<div class="set-displ" id="update-ml"></div>
+<div id="pagecontent-index"></div>
 </div><div class="overlay-pop-up" id="new-overlay"></div>
-<div class="set-displ" id="log-out-mail" style="padding: 10px;"></div>
 <div class="overlay-pop-up"></div>
 <div class="hf" style="height: 50px;width: 1px;"></div>
     <footer class="footer"></footer>
