--- a/log-in.html
+++ b/log-in.html
@@ -41,7 +41,7 @@
 
     </div>
     <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
-
+    <div id="pagecontent-index"></div>
     <footer class="footer"></footer>
 </body>
 
