--- a/search.html
+++ b/search.html
@@ -35,9 +35,11 @@
     </header><div id="bodyID" style="visibility: hidden;"></div>
 
 <div id="savedds"></div>
+<div id="pagecontent-index"></div>
 
-
-    <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+    <div class="set-displ" id="update-ml" style="padding: 10px;"></div> 
+    
+    <div class="overlay-pop-up" id="new-overlay"></div>
 
     <footer class="footer"></footer>
     <div idd="delete-s"></div>
