--- a/upload.html
+++ b/upload.html
@@ -37,7 +37,7 @@
 <div id="postcontent" class="storage-posts-reference" ></div>
 <div class="mr" style="height: 55px;width: 1px;"></div>
 <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
-
+<div id="pagecontent-index"></div>
     <footer class="footer"></footer>
 
     
