--- a/search.html
+++ b/search.html
@@ -24,19 +24,13 @@
         <img src="" alt="" id="img" class="proile-image">
         
     </div>
-    <div id="new-div">
-       <div>
-        <i class="far fa-envelope txt-fnt"></i>
-       </div>
-       <div>
-        <i class="fas fa-sign-out-alt new-fnt"></i>
-       </div>
     </div>
-    </header><div id="bodyID" style="visibility: hidden;"></div>
-
+    <button onclick="shoro()" id="sa">sd</button>
+    </header>
+<div id="pw"></div>
 <div id="savedds"></div>
 <div id="pagecontent-index"></div>
-
+<div id="ass"></div>
     <div class="set-displ" id="update-ml" style="padding: 10px;"></div> 
     
     <div class="overlay-pop-up" id="new-overlay"></div>
