--- a/create-account.html
+++ b/create-account.html
@@ -34,6 +34,7 @@
     <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div><div class="overlay-pop-up" id="new-overlay"></div>
     <footer class="footer"></footer>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>    
