--- a/profile.html
+++ b/profile.html
@@ -24,15 +24,14 @@
         <p class="name-netowork"><b>Saveprojects</b></p>
     <div class="contact-header"></div>
     </header>
-   
-    <div id="bodyID" class="storage-posts-reference" style="margin-top: 35px;"></div> 
-    <div class="hf" style="height: 50px;width: 1px;"></div>
+    <div id="sasd"></div>
+    
+
+
   <div id="pagecontent-index"></div>
-  
   <footer class="footer"></footer>
 </body>  
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
