--- a/search.html
+++ b/search.html
@@ -25,6 +25,7 @@
         
     </div>
     </div>
+   
     <button onclick="shoro()" id="sa">sd</button>
     </header>
 <div id="pw"></div>
@@ -38,6 +39,7 @@
     <footer class="footer"></footer>
     <div idd="delete-s"></div>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
