--- a/upload.html
+++ b/upload.html
@@ -34,7 +34,7 @@
         <p id="total-transfered-percetage"></p>
     </div>
     </div>
-<div id="postcontent" class="storage-posts-reference" ></div>
+<div id="postcontent" class="storage-posts-reference" style="display: grid;margin: auto;" ></div>
 <div class="mr" style="height: 55px;width: 1px;"></div>
 <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
 <div id="pagecontent-index"></div>
@@ -45,6 +45,7 @@
     </script>
     
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
