--- a/inbox.html
+++ b/inbox.html
@@ -24,11 +24,29 @@
         <p class="name-netowork"><b>Saveprojects</b></p>
     <div class="contact-header"></div>
     </header>
+ 
+ 
+
+
+<section class="text-box-div">
+    <div id="chat-box"></div>
+
+    <div class="text-field">
+     <input type="text" name="" id="text-message-user"  class="input-message-to-client" autocomplete="off" autofocus="off">
+       <button id="sendMessage" class="send-message-to-client-button">SEND</button>
+    </div>
+
+   </section>
+
+
    
-    <div id="bodyID" class="storage-posts-reference" style="margin-top: 35px;"></div> 
-    <div class="hf" style="height: 50px;width: 1px;"></div>
-  <div id="pagecontent-index"></div>
+ <div id="ss" >
+        <input type="text" name="" id="text-username-user" placeholder="name"> 
   
+       </div>
+
+
+  <div id="pagecontent-index"></div>
   <footer class="footer"></footer>
 </body>  
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
