--- a/settings.html
+++ b/settings.html
@@ -56,12 +56,8 @@
     </div>
    
     <div class="set-class flex-down">
-        <button  class="setting-button top-mrg">Files</button>   
-        <button  class="setting-button top-mrg">Profile info</button> 
-    </div>
-
-    <div class=" set-class flex-down" onclick="help()">
-        <button  class="setting-button top-mrg">Help</button>   
+        <button  class="setting-button top-mrg" onclick="help()">Help</button> 
+        <button  class="setting-button top-mrg" onclick="help()">Contact us</button>     
     </div>
 
 </div>
@@ -71,6 +67,7 @@
 <div class="hf" style="height: 50px;width: 1px;"></div>
     <footer class="footer"></footer>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
