--- a/inbox.html
+++ b/inbox.html
@@ -32,10 +32,13 @@
     <div id="chat-box"></div>
 
     <div class="text-field">
+        <div id="cli"> 
+           
+        </div>
      <input type="text" name="" id="text-message-user"  class="input-message-to-client" autocomplete="off" autofocus="off">
        <button id="sendMessage" class="send-message-to-client-button">SEND</button>
     </div>
-
+<div id="emojis" style="display: flex;"></div>
    </section>
 
 
