--- a/inbox.html
+++ b/inbox.html
@@ -19,38 +19,35 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
-<body  class="index-body">
-    <header class="header-index  sticky-header">       
-        <p class="name-netowork"><b>Saveprojects</b></p>
-    <div class="contact-header"></div>
-    </header>
- 
- 
+<body  class="index-body" >
 
+ 
+<script>document.body.style.overflow='hidden'</script>
+<div class="wrapper">
 
-<section class="text-box-div">
+    <div class="header-chat">
+        <p>s</p>
+    </div>
     <div id="chat-box"></div>
 
-    <div class="text-field">
-        <div id="cli"> 
-           
-        </div>
-     <input type="text" name="" id="text-message-user"  class="input-message-to-client" autocomplete="off" autofocus="off">
-       <button id="sendMessage" class="send-message-to-client-button">SEND</button>
-    </div>
-<div id="emojis" style="display: flex;"></div>
-   </section>
+ <div id="emojis" class="emoji-block es"></div>  
 
+</div>
 
-   
- <div id="ss" >
-        <input type="text" name="" id="text-username-user" placeholder="name"> 
-  
-       </div>
 
 
   <div id="pagecontent-index"></div>
-  <footer class="footer"></footer>
+  <div class="s-style">
+  <div class="text-field a-style">
+    <div id="cli"> 
+       
+    </div>
+    <!-- <input type="file" name="" id="sendImage"> -->
+    <i class="far fa-laugh f-icon" onclick="showEmojies()"></i>
+ <input type="text" name="" id="text-message-user"  class="input-message-to-client" autocomplete="off" autofocus="off">
+   <button id="sendMessage" class="send-message-to-client-button">SEND</button>
+</div>
+  <footer class="footer chat-footer"></footer></div>
 </body>  
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
