--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Saveprojects</title>
     <link rel="shortcut icon" href="./media/none-pic.png" type="image/png">
     <link rel="stylesheet" href="style.css">
-   
+   <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase.js"></script>
@@ -37,4 +37,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
+<script src="index.js"></script>
 </html>
