--- a/upload.html
+++ b/upload.html
@@ -20,7 +20,7 @@
         <p class="name-netowork"><b>Saveprojects</b></p>
     <div class="contact-header"></div>
     </header>
-      <div class="set-class set-padding column-gird top-m">
+      <div class="set-class set-padding column-gird" style="margin-top: 50px;">
         <div class="main-content">
             <div class="flex-style">
                 <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile hide-file" onchange="uploadFileToFirebase(event)" multiple/>+</label>
