--- a/inbox.html
+++ b/inbox.html
@@ -42,7 +42,8 @@
     <div id="cli"> 
        
     </div>
-    <!-- <input type="file" name="" id="sendImage"> -->
+     <input type="file" name="" id="sendImage"  multiple>
+     <button onclick="sendToIndex()">sendf</button>
     <i class="far fa-laugh f-icon" onclick="showEmojies()"></i>
  <input type="text" name="" id="text-message-user"  class="input-message-to-client" autocomplete="off" autofocus="off">
    <button id="sendMessage" class="send-message-to-client-button">SEND</button>
