--- a/settings.html
+++ b/settings.html
@@ -40,24 +40,24 @@
     </div>
 
 
-    <div class=" set-class flex-down" onclick="showMailUpdater()">
-        <button  class="setting-button top-mrg">Update email</button>   
+    <div class="set-class flex-down" onclick="showMailUpdater()">
+        <button  class="setting-button">Update email</button>   
     </div>
 
     <div class="set-class flex-down">
-        <button onclick="resetPassword()" class="setting-button top-mrg">Reset password</button>
+        <button onclick="resetPassword()" class="setting-button">Reset password</button>
         <button onclick="verifyAccount()" class="setting-button">Verify account</button>
         <button onclick="deleteAccount()" class="setting-button delete">Delete account</button>
     </div>
 
     <div class=" set-class flex-down">
-        <button  class="setting-button top-mrg green" onclick="redirectLogIn()">Log in</button>   
-        <button  class="setting-button top-mrg" onclick="logOut()">Log out</button>   
+        <button  class="setting-button green" onclick="redirectLogIn()">Log in</button>   
+        <button  class="setting-button" onclick="logOut()">Log out</button>   
     </div>
    
     <div class="set-class flex-down">
-        <button  class="setting-button top-mrg" onclick="help()">Help</button> 
-        <button  class="setting-button top-mrg" onclick="help()">Contact us</button>     
+        <button  class="setting-button" onclick="help()">Help</button> 
+        <button  class="setting-button" onclick="help()">Contact us</button>     
     </div>
 
 </div>
