--- a/inbox.html
+++ b/inbox.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,6 @@
     <title>Saveprojects</title>
     <link rel="shortcut icon" href="./media/none-pic.png" type="image/png">
     <link rel="stylesheet" href="style.css">
-   
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase.js"></script>
@@ -20,36 +18,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
 <body  class="index-body" >
-
- 
 <script>document.body.style.overflow='hidden'</script>
 <div class="wrapper">
-
     <div class="header-chat">
-        <p>s</p>
+      <p class="group-name"><b>Group chat</b></p>
+        <i class="far fa-edit f-icon"></i>
     </div>
     <div id="chat-box"></div>
-
  <div id="emojis" class="emoji-block es"></div>  
-
 </div>
-
-
-
   <div id="pagecontent-index"></div>
   <div class="s-style">
   <div class="text-field a-style">
-    <div id="cli"> 
-       
+    <div id="cli">      
     </div>
-   
-
     <label class="chose-file margin-file fas fa-image f-icon"><input type="file"  accept=".png, .jpg, .jpeg" class="myFile hide-file"id="sendImage" multiple/></label>
     <label class="chose-file margin-file fas fa-video f-icon"><input type="file" accept="video/mp4,video/x-m4v,video/*" class="myFile hide-file"id="sendVideo" multiple/></label>
-
-    <i class="far fa-laugh f-icon" onclick="showEmojies()"></i>
+    <i class="far fa-laugh f-icon" onclick="showEmojies()" id="sendEmojiIcon"></i>
+    <div class="send-message-x-field">
  <input type="text" name="" id="text-message-user"  class="input-message-to-client" autocomplete="off" autofocus="off">
    <button id="sendMessage" class="send-message-to-client-button">SEND</button>
+</div>
 </div>
   <footer class="footer chat-footer"></footer></div>
 </body>  
