--- a/contact-us.html
+++ b/contact-us.html
@@ -12,14 +12,21 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-functions.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="body-animation">
-    <header class="header-index">
-        <div class="contact-header"></div>
-        <div class="user-logged-info">
-            <div id="usernamename"></div>
-            <img src="" alt="" id="img" class="proile-image">
-        </div>
+<style>
+    .body-animation,.nindex-body{
+    background: #ff00cc;  /* fallback for old browsers */
+
+background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+</style>
+<body class="nindex-body">
+    <header class="header-index">       
+        <p class="name-netowork"><b>Saveprojects</b></p>
+    <div class="contact-header"></div>
     </header>
     <div class="forma-contact">
         <div class="hed-line">
@@ -30,12 +37,21 @@
         <div class="form-index form-margin conact-width">
             <input type="text" name="subject" id="subject-input" placeholder="Subject" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="mail" id="mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
-            <input type="text" name="message" id="message-input" placeholder="Message" autocomplete="off" autofocus="off" class="input-box" required>
+            <!-- <input type="text" name="message" id="message-input" placeholder="Message" autocomplete="off" autofocus="off" class="input-box" required> -->
+            
+            <textarea name="message" id="message-input" cols="1" rows="3" placeholder="Message" autocomplete="off" autofocus="off" class="input-box" required></textarea>
             <button class="submit-button submit-responsive" id="submit" onclick="sendMail()">SEND</button>
         </div>
     </div>
+    <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+    <div id="pagecontent-index"></div>
     <footer class="footer"></footer>
+
+
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
