--- a/index.html
+++ b/index.html
@@ -4,29 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marko</title>
+    <title>Saveprojects</title>
+    <link rel="shortcut icon" href="./media/none-pic.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+   <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-functions.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
 <body  class="index-body">
-    <header class="header-index">
-        
-        <div class="contact-header"></div>
-        <div class="user-logged-info">
-            <div id="usernamename"></div>
-            <img src="" alt="" id="img" class="proile-image">
-        </div>
+    <header class="header-index  sticky-header">       
+        <p class="name-netowork"><b>Saveprojects</b></p>
+    <div class="contact-header"></div>
     </header>
-    <img src="./media/index-img.png" alt="" class="index-imagee">
-    
+    <div class="swiper-container">
+        <div class="swiper-wrapper" id="story-wrapper"></div>
+    </div>
+    <div id="bodyID" class="storage-posts-reference" style="margin-top: 35px;"></div> 
+    <div class="hf" style="height: 50px;width: 1px;"></div>
+  <div id="pagecontent-index"></div>
   <footer class="footer"></footer>
-</body>
+</body>  
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 <script src="code-behind.js"></script>
-<script src="https://smtpjs.com/v3/smtp.js">
-</script>
+<script src="index.js"></script>
 </html>
