--- a/settings.html
+++ b/settings.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,22 +12,19 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-functions.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body  class="index-body">
-    <header class="header-index">
-        
-        <div class="contact-header"></div>
-        
-        <div class="user-logged-info">
-        <div id="usernamename"></div>
-        <img src="" alt="" id="img" class="proile-image">
-    </div>
+    <header class="header-index">       
+        <p class="name-netowork"><b>Saveprojects</b></p>
+    <div class="contact-header"></div>
     </header>
 
 <div class="body-context">
 
-    <div class="set-profile-iamge set-class set-padding column-gird">
+    <div class="set-class set-padding column-gird">
         <div class="main-content">
             <div class="flex-style">
                 <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile hide-file" onchange="uploadImageUser(event)"/>+</label>
@@ -42,46 +40,36 @@
     </div>
 
 
-    <div class="set-profile-iamge set-class flex-down" onclick="showMailUpdater()">
-        <button  class="setting-button top-mrg">Update email</button>   
+    <div class="set-class flex-down" onclick="showMailUpdater()">
+        <button  class="setting-button">Update email</button>   
     </div>
 
-    <div class="set-profile-iamge set-class flex-down">
-        <button onclick="resetPassword()" class="setting-button top-mrg">Reset password</button>
+    <div class="set-class flex-down">
+        <button onclick="resetPassword()" class="setting-button">Reset password</button>
         <button onclick="verifyAccount()" class="setting-button">Verify account</button>
         <button onclick="deleteAccount()" class="setting-button delete">Delete account</button>
     </div>
 
-    <div class="set-profile-iamge set-class flex-down">
-        <button  class="setting-button top-mrg green" onclick="redirectLogIn()">Log in</button>   
-        <button  class="setting-button top-mrg" onclick="logOut()">Log out</button>   
+    <div class=" set-class flex-down">
+        <button  class="setting-button green" onclick="redirectLogIn()">Log in</button>   
+        <button  class="setting-button" onclick="logOut()">Log out</button>   
     </div>
    
-    <div class="set-profile-iamge set-class flex-down">
-        <button  class="setting-button top-mrg">Files</button>   
-        <button  class="setting-button top-mrg">Profile info</button> 
-    </div>
-
-    <div class="set-profile-iamge set-class flex-down" onclick="help()">
-        <button  class="setting-button top-mrg">Help</button>   
+    <div class="set-class flex-down">
+        <button  class="setting-button" onclick="help()">Help</button> 
+        <button  class="setting-button" onclick="help()">Contact us</button>     
     </div>
 
 </div>
-
-<div class="set-displ">
-<div class="set-profile-iamge set-class popup" id="ch-mail">
-    <button class="setting-button top-mrg">Update email</button>
-    <input type="text" name="newmail" id="new-mail-set"  placeholder="New password" autocomplete="off" autofocus="off" class="input-box-new">
-    <div class="flex-button">
-        <button class="new-mail" onclick="cancleUpdateMail()">CANCLE</button>
-        <button class="new-mail" onclick="updateMail()">UPDATE</button>
-    </div>
-</div>
-</div>
+<div id="pagecontent-index"></div>
+</div><div class="overlay-pop-up" id="new-overlay"></div>
 <div class="overlay-pop-up"></div>
 <div class="hf" style="height: 50px;width: 1px;"></div>
     <footer class="footer"></footer>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
