--- a/inbox.html
+++ b/inbox.html
@@ -50,6 +50,11 @@
 </div>
   <footer class="footer chat-footer"></footer></div></div>
   <div class="open-message-overlay" id="open-content"></div>
+  
+  <div class="delete-overlay" id="message-overlay">
+    <div class="pop-up-message-deleting d-class" id="delete-message-popup"></div>
+    
+  </div>
 </body>  
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
