--- a/upload.html
+++ b/upload.html
@@ -38,6 +38,7 @@
 <div class="mr" style="height: 55px;width: 1px;"></div>
 <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
 <div id="pagecontent-index"></div>
+<button id="private">PRIVATE</button>
     <footer class="footer"></footer>
     
     <script>
