--- a/search.html
+++ b/search.html
@@ -36,8 +36,16 @@
     
     <div class="overlay-pop-up" id="new-overlay"></div>
 
+
+
     <footer class="footer"></footer>
     <div idd="delete-s"></div>
+    <script>
+        document.getElementById('xws').addEventListener('click',() =>{
+            document.getElementById('xws').classList.add('public-c');
+            document.getElementById('xsws').classList.add('public-c-x');
+        })
+    </script>
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
