--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
     
     <div class="overlay-pop-up" id="new-overlay"></div>
 
-
+    <div id="esae" class="storage-posts-reference" style="margin-top: 35px;display: grid;"></div> 
 
     <footer class="footer"></footer>
     <div idd="delete-s"></div>
