--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
     <div class="swiper-container">
         <div class="swiper-wrapper" id="story-wrapper"></div>
     </div>
-    <div id="bodyID" class="storage-posts-reference" style="margin-top: 35px;"></div> 
+
+    <div class="public-private-option" id="post-buttons">
+         <!-- <div class="private-public-button"></div>
+         <div class="private-public-button"></div> -->
+    </div>
+
+    <div id="bodyID" class="storage-posts-reference" ></div> 
+    <div id="esae" class="storage-posts-reference" style="margin-top: 35px;"></div> 
     <div class="hf" style="height: 50px;width: 1px;"></div>
   <div id="pagecontent-index"></div>
   <footer class="footer"></footer>
@@ -42,4 +49,5 @@
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 <script src="code-behind.js"></script>
 <script src="index.js"></script>
+<script src="index-code.js"></script>
 </html>
