--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Saveprojects</title>
     <link rel="shortcut icon" href="./media/none-pic.png" type="image/png">
     <link rel="stylesheet" href="style.css">
-   <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase.js"></script>
@@ -25,19 +25,12 @@
         <p class="name-netowork"><b>Saveprojects</b></p>
     <div class="contact-header"></div>
     </header>
-    <div class="swiper-container">
-        <div class="swiper-wrapper" id="story-wrapper"></div>
-    </div>
-
-    <div class="public-private-option" id="post-buttons">
-         <!-- <div class="private-public-button"></div>
-         <div class="private-public-button"></div> -->
-    </div>
-
-    <div id="bodyID" class="storage-posts-reference" ></div> 
-    <div id="esae" class="storage-posts-reference" style="margin-top: 35px;"></div> 
+    <div class="swiper-container"><div class="swiper-wrapper" id="story-wrapper"></div></div>
+    <div class="public-private-option" id="post-buttons"></div>
+    <div id="bodyID" class="storage-posts-reference"></div> 
+    <div id="esae" class="storage-posts-reference"></div> 
     <div class="hf" style="height: 50px;width: 1px;"></div>
-  <div id="pagecontent-index"></div>
+    <div id="pagecontent-index"></div>
   <footer class="footer"></footer>
 </body>  
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
