--- a/upload.html
+++ b/upload.html
@@ -26,7 +26,7 @@
                 <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile hide-file" onchange="uploadFileToFirebase(event)" multiple/>+</label>
                 <p class="l-margin">Choose file</p>
             </div>
-            <button  class="update-button green" onclick="sendToIndex()">Update</button>
+            <button  class="update-button green" onclick="sendToIndex()">Upload</button>
         </div>
 
     <div class="progress-div" id="uploading-proces">
