--- a/settings.html
+++ b/settings.html
@@ -47,11 +47,10 @@
     <div class="set-class flex-down">
         <button onclick="resetPassword()" class="setting-button">Reset password</button>
         <button onclick="verifyAccount()" class="setting-button">Verify account</button>
-        <button onclick="deleteAccount()" class="setting-button delete">Delete account</button>
+        <button onclick="showDeletePopUpAccountFromClass()" class="setting-button delete">Delete account</button>
     </div>
 
-    <div class=" set-class flex-down">
-        <button  class="setting-button green" onclick="redirectLogIn()">Log in</button>   
+    <div class=" set-class flex-down">  
         <button  class="setting-button" onclick="logOut()">Log out</button>   
     </div>
    
