--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Marko</title>
     <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -23,16 +23,16 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 
 }
 </style>
-<body class="nindex-body">
+<body class="index-body">
     <header class="header-index">       
         <p class="name-netowork"><b>Saveprojects</b></p>
     <div class="contact-header"></div>
     </header>
     <div class="forma-contact">
         <div class="hed-line">
-            <i class="far fa-envelope"></i>
-            <p>Contact us</p>
-            <p id="message">Feel free to send us message at any give time</p>
+
+            <p style="color: white;">Contact us</p>
+            <p id="message" style="color: white;">Feel free to send us message at any give time</p>
         </div>
         <div class="form-index form-margin conact-width">
             <input type="text" name="subject" id="subject-input" placeholder="Subject" autocomplete="off" autofocus="off" class="input-box" required>
