--- a/profile-visit.html
+++ b/profile-visit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saveprojects</title>
     <link rel="shortcut icon" href="./media/none-pic.png" type="image/png">
     <link rel="stylesheet" href="style.css">
@@ -45,8 +45,8 @@
                 <p class="post-type-avatar">private</p>
             </div>
         </div>
-        <div class="avatar-biography" onclick="alertUserAboutSuccess('Comming soon! Work in progress!')">
-            <p class="biography-profile">Saved posts</p>
+        <div class="avatar-biography">
+            <p class="biography-profile">Profile type</p>
             <i class="fas fa-chevron-right f-icon"></i>
         </div>
 
@@ -73,13 +73,10 @@
 
 
 
- <!-- <div class="profile-types">
+ <div class="profile-types">
      <p>Choose type of your profile:</p>
-     <div class="bar">Entrepreneuer</div>
-     <div class="bar">Developer</div>
-     <div class="bar">Public figure</div>
      <div class="bar">Profile name</div>
- </div> -->
+ </div>
 
 
 
